//   Copyright (c) 2020 PaddlePaddle Authors. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// The hearbeat service definition.
service GrpcHeartbeat {
  rpc Send(Request) returns (Reply) {}
}

// The request message.
message Request {
  string client_id = 1;
  bytes tag = 2;
  string instance_id = 4; // used in heartbeat detection between the job and client.
  string extra_msg = 8;
}

// The response message
message Reply {
  bytes tag = 1;
}
